--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
   </style>
 </head>
 <body>
-  <img src="nome-immagine.jpg" alt="Foglio">
+  <img src="img025.jpeg" alt="Foglio">
   
   <!-- Esempio di link invisibili -->
   <a href="about.html" class="link" style="top:50px; left:50px; width:100px; height:20px;"></a>
@@ -39,3 +39,4 @@
   <a href="contact.html" class="link" style="top:110px; left:50px; width:100px; height:20px;"></a>
 </body>
 </html>
+
