--- a/index.html
+++ b/index.html
@@ -7,28 +7,16 @@
     body {
       margin: 0;
       padding: 0;
-      position: relative;
     }
     img {
       display: block;
       width: 100%;
       height: auto;
     }
-    .link {
-      position: absolute;
-      display: block;
-      color: transparent; /* invisibile */
-    }
   </style>
 </head>
 <body>
-  <img src="img059.jpg" alt="Foglio">
-
-  <!-- Link invisibili posizionati sopra le scritte -->
-  <a href="about.html" class="link" style="top:100px; left:50px; width:100px; height:20px;"></a>
-  <a href="projects.html" class="link" style="top:150px; left:50px; width:100px; height:20px;"></a>
-  <a href="contact.html" class="link" style="top:200px; left:50px; width:100px; height:20px;"></a>
+  <!-- Mostra l'immagine -->
+  <img src="img025.jpeg" alt="">
 </body>
 </html>
-
-
