--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@
 </head>
 <body>
   <!-- Mostra l'immagine -->
-  <img src="img025.jpeg" alt="">
+  <img src="img025bis.jpeg" alt="">
 </body>
 </html>
+
