--- a/index.html
+++ b/index.html
@@ -17,9 +17,10 @@
 </head>
 <body>
   <!-- Mostra l'immagine -->
-  <img src="img028.jpeg" alt="">
+  <img src="img001.jpg" alt="">
 </body>
 </html>
+
 
 
 
