--- a/index.html
+++ b/index.html
@@ -16,15 +16,7 @@
   </style>
 </head>
 <body>
-  <!-- Mostra l'immagine -->
-  <img src="img001.jpeg" alt="">
+  <!-- Mostra la scansione corretta -->
+  <img src="img001.jpg" alt="">
 </body>
 </html>
-
-
-
-
-
-
-
-
