--- a/index.html
+++ b/index.html
@@ -23,14 +23,14 @@
   </style>
 </head>
 <body>
-  <!-- Mostra la scansione -->
-  <img src="img001.jpg" alt="">
+  <!-- Immagine della scansione -->
+  <img src="img001.jpg" alt="Foglio scansionato con scritte About, Projects, Contact, Shop">
 
   <!-- Link invisibili sopra le scritte -->
-  <!-- Modifica top, left, width e height per allineare perfettamente alle scritte -->
-  <a href="about.html" class="link" style="top:100px; left:50px; width:100px; height:20px;"></a>
-  <a href="projects.html" class="link" style="top:140px; left:50px; width:100px; height:20px;"></a>
-  <a href="contact.html" class="link" style="top:180px; left:50px; width:100px; height:20px;"></a>
-  <a href="shop.html" class="link" style="top:220px; left:50px; width:100px; height:20px;"></a>
+  <!-- I valori top, left, width, height possono essere regolati in base alla tua immagine -->
+  <a href="about.html" class="link" style="top:100px; left:50px; width:120px; height:30px;"></a>
+  <a href="projects.html" class="link" style="top:150px; left:50px; width:120px; height:30px;"></a>
+  <a href="contact.html" class="link" style="top:200px; left:50px; width:120px; height:30px;"></a>
+  <a href="shop.html" class="link" style="top:250px; left:50px; width:120px; height:30px;"></a>
 </body>
 </html>
