--- a/about.html
+++ b/about.html
@@ -3,10 +3,14 @@
 <head>
   <meta charset="UTF-8">
   <title>About</title>
+  <style>
+    body { margin: 0; padding: 0; }
+    img { width: 100%; height: auto; display: block; }
+  </style>
 </head>
 <body>
-  <h1>About</h1>
-  <p>Qui inserisci le informazioni su di te.</p>
-  <a href="index.html">Torna alla Home</a>
+
+  <img src="about.jpg" alt="About">
+
 </body>
 </html>
