--- a/projects.html
+++ b/projects.html
@@ -3,10 +3,14 @@
 <head>
   <meta charset="UTF-8">
   <title>Projects</title>
+  <style>
+    body { margin: 0; padding: 0; }
+    img { width: 100%; height: auto; display: block; }
+  </style>
 </head>
 <body>
-  <h1>Projects</h1>
-  <p>Qui inserisci i tuoi progetti.</p>
-  <a href="index.html">Torna alla Home</a>
+
+  <img src="project.jpg" alt="Projects">
+
 </body>
 </html>
