--- a/contact.html
+++ b/contact.html
@@ -3,10 +3,14 @@
 <head>
   <meta charset="UTF-8">
   <title>Contact</title>
+  <style>
+    body { margin: 0; padding: 0; }
+    img { width: 100%; height: auto; display: block; }
+  </style>
 </head>
 <body>
-  <h1>Contact</h1>
-  <p>Qui inserisci le informazioni di contatto.</p>
-  <a href="index.html">Torna alla Home</a>
+
+  <img src="contact.jpg" alt="Contact">
+
 </body>
 </html>
