--- a/shop.html
+++ b/shop.html
@@ -3,10 +3,14 @@
 <head>
   <meta charset="UTF-8">
   <title>Shop</title>
+  <style>
+    body { margin: 0; padding: 0; }
+    img { width: 100%; height: auto; display: block; }
+  </style>
 </head>
 <body>
-  <h1>Shop</h1>
-  <p>Qui puoi inserire prodotti o servizi.</p>
-  <a href="index.html">Torna alla Home</a>
+
+  <img src="shop.jpg" alt="Shop">
+
 </body>
 </html>
