--- a/index.html
+++ b/index.html
@@ -10,10 +10,12 @@
       position: relative; /* necessario per posizionare i link */
     }
     img {
-      display: block;
-      width: 100%;
-      height: auto;
-    }
+  display: block;
+  width: 900px;   /* larghezza fissa */
+  height: auto;
+  margin-left: auto;
+  margin-right: auto;
+}
     .link {
       position: absolute;
       display: block;
@@ -34,5 +36,6 @@
   <a href="shop.html" class="link" style="top:360px; left:300px; width:170px; height:30px;"></a>
 </body>
 </html>
+
 
 
