--- a/index.html
+++ b/index.html
@@ -36,6 +36,7 @@
   <a href="shop.html" class="link" style="top:360px; left:300px; width:170px; height:30px;"></a>
 </body>
 </html>
+Bloccata larghezza immagine per posizionamento corretto link
 
 
 
