--- a/index.html
+++ b/index.html
@@ -10,16 +10,17 @@
       padding: 0;
     }
 
-    /* Contenitore che centra l'immagine e permette il posizionamento dei link */
+    /* Contenitore che diventa responsivo su mobile */
     .img-wrapper {
       position: relative;
-      width: 900px;       /* larghezza fissa per posizionamento preciso */
-      margin: 0 auto;     /* centra il contenitore nella pagina */
+      width: 90vw;          /* si adatta allo schermo */
+      max-width: 900px;     /* su desktop resta 900px */
+      margin: 0 auto;
     }
 
     img {
       display: block;
-      width: 100%;
+      width: 100%;          /* immagine sempre grande su mobile */
       height: auto;
     }
 
@@ -29,7 +30,7 @@
       cursor: pointer;
     }
 
-    /* ⭐ EFFETTO "LUCE ROSSA DA CAMERA OSCURA" ⭐ */
+    /* ⭐ Effetto "Luce rossa da camera oscura" ⭐ */
     .link:hover {
       background: rgba(255, 0, 0, 0.25);
       box-shadow:
@@ -45,7 +46,7 @@
   <div class="img-wrapper">
     <img src="img001.jpg" alt="Foglio scansionato con scritte About, Projects, Contact, Shop">
 
-    <!-- Pulsanti invisibili -->
+    <!-- Pulsanti invisibili (coordinate fisse, semplici) -->
     <a href="about.html"    class="link" style="top:175px; left:200px; width:90px; height:20px;"></a>
     <a href="projects.html" class="link" style="top:200px; left:200px; width:120px; height:20px;"></a>
     <a href="contact.html"  class="link" style="top:225px; left:200px; width:110px; height:20px;"></a>
