--- a/index.html
+++ b/index.html
@@ -2,9 +2,7 @@
 <html lang="it">
 <head>
   <meta charset="UTF-8">
-  <!-- Viewport necessario per mobile -->
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-
   <title>Home</title>
 
   <style>
@@ -41,7 +39,7 @@
         inset 0 0 6px rgba(255, 0, 0, 0.3);
     }
 
-    /* Media query per schermi piccoli (smartphone) */
+    /* Media query per smartphone */
     @media (max-width: 600px) {
       .img-wrapper {
         width: 100vw;   /* massima larghezza possibile */
@@ -52,10 +50,10 @@
         height: auto;
       }
 
-      /* ingrandiamo i link proporzionalmente */
+      /* Link ancora più grandi: scala al 220% */
       .link {
-        transform: scale(1.8);           /* scala al 180% */
-        transform-origin: top left;      /* scala a partire dall'angolo in alto a sinistra */
+        transform: scale(2.2);           /* scala al 220% */
+        transform-origin: top left;      /* scala dall'angolo in alto a sinistra */
       }
     }
   </style>
