--- a/index.html
+++ b/index.html
@@ -14,8 +14,7 @@
     /* Contenitore responsivo */
     .img-wrapper {
       position: relative;
-      width: 90vw;         /* default quasi tutta la larghezza dello schermo */
-      max-width: 900px;    /* su desktop resta 900px */
+      width: 1980px; /* 900px * 2.2 = 1980px */
       margin: 0 auto;
     }
 
@@ -39,23 +38,13 @@
         inset 0 0 6px rgba(255, 0, 0, 0.3);
     }
 
-    /* Media query per smartphone */
-    @media (max-width: 600px) {
-      .img-wrapper {
-        width: 100vw;   /* massima larghezza possibile */
-      }
+    /* Ingrandimento proporzionale dei link */
+    /* Tutti i valori dei link sono moltiplicati per 2.2 */
+    a.about    { top: 175px * 2.2; left: 200px * 2.2; width: 90px * 2.2; height: 20px * 2.2; }
+    a.projects { top: 200px * 2.2; left: 200px * 2.2; width: 120px * 2.2; height: 20px * 2.2; }
+    a.contact  { top: 225px * 2.2; left: 200px * 2.2; width: 110px * 2.2; height: 20px * 2.2; }
+    a.shop     { top: 250px * 2.2; left: 200px * 2.2; width: 80px * 2.2; height: 20px * 2.2; }
 
-      img {
-        width: 100%;
-        height: auto;
-      }
-
-      /* Link ancora più grandi: scala al 440% */
-      .link {
-        transform: scale(4.4);           /* scala al 440% */
-        transform-origin: top left;      /* scala dall'angolo in alto a sinistra */
-      }
-    }
   </style>
 </head>
 
@@ -65,10 +54,10 @@
     <img src="img001.jpg" alt="Foglio scansionato con scritte About, Projects, Contact, Shop">
 
     <!-- Pulsanti invisibili -->
-    <a href="about.html"    class="link" style="top:175px; left:200px; width:90px; height:20px;"></a>
-    <a href="projects.html" class="link" style="top:200px; left:200px; width:120px; height:20px;"></a>
-    <a href="contact.html"  class="link" style="top:225px; left:200px; width:110px; height:20px;"></a>
-    <a href="shop.html"     class="link" style="top:250px; left:200px; width:80px; height:20px;"></a>
+    <a href="about.html"    class="link about"></a>
+    <a href="projects.html" class="link projects"></a>
+    <a href="contact.html"  class="link contact"></a>
+    <a href="shop.html"     class="link shop"></a>
   </div>
 
 </body>
