--- a/index.html
+++ b/index.html
@@ -2,59 +2,51 @@
 <html lang="it">
 <head>
   <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Home</title>
 
   <style>
     body {
       margin: 0;
       padding: 0;
-    }
-
-    /* Contenitore con larghezza bloccata */
-    .img-wrapper {
-      position: relative;
-      width: 1980px; /* 900px * 2.2 */
-      margin: 0 auto;
+      position: relative; /* necessario per posizionare i link */
     }
 
     img {
       display: block;
-      width: 100%;
+      width: 900px;   /* larghezza fissa */
       height: auto;
+      margin-left: auto;
+      margin-right: auto;
     }
 
     .link {
       position: absolute;
-      background: rgba(0,0,0,0);
-      cursor: pointer;
+      display: block;
+      background: rgba(0,0,0,0); /* rettangolo invisibile */
+      cursor: pointer; /* cambia il cursore quando passi sopra */
     }
 
-    /* Luce rossa da camera oscura */
+    /* Effetto "Luce rossa da camera oscura" */
     .link:hover {
       background: rgba(255, 0, 0, 0.25);
       box-shadow:
-        0 0 10px rgba(255, 60, 60, 0.4),
-        inset 0 0 6px rgba(255, 0, 0, 0.3);
+        0 0 15px rgba(255, 0, 0, 0.5);
     }
-
-    /* Link con posizioni ingrandite proporzionalmente */
-    .about    { top: 385px; left: 440px; width: 198px; height: 44px; }   /* 175*2.2, 200*2.2, 90*2.2, 20*2.2 */
-    .projects { top: 440px; left: 440px; width: 264px; height: 44px; }   /* 200*2.2, 200*2.2, 120*2.2, 20*2.2 */
-    .contact  { top: 495px; left: 440px; width: 242px; height: 44px; }   /* 225*2.2, 200*2.2, 110*2.2, 20*2.2 */
-    .shop     { top: 550px; left: 440px; width: 176px; height: 44px; }   /* 250*2.2, 200*2.2, 80*2.2, 20*2.2 */
 
   </style>
 </head>
+
 <body>
 
-  <div class="img-wrapper">
-    <img src="img001.jpg" alt="Foglio scansionato con scritte About, Projects, Contact, Shop">
+  <!-- Immagine della scansione -->
+  <img src="img001.jpg" alt="Foglio scansionato con scritte About, Projects, Contact, Shop">
 
-    <a href="about.html" class="link about"></a>
-    <a href="projects.html" class="link projects"></a>
-    <a href="contact.html" class="link contact"></a>
-    <a href="shop.html" class="link shop"></a>
-  </div>
+  <!-- Link invisibili sopra le scritte -->
+  <a href="about.html" class="link" style="top:175px; left:200px; width:90px; height:20px;"></a>
+  <a href="projects.html" class="link" style="top:200px; left:200px; width:120px; height:20px;"></a>
+  <a href="contact.html" class="link" style="top:225px; left:200px; width:110px; height:20px;"></a>
+  <a href="shop.html" class="link" style="top:250px; left:200px; width:80px; height:20px;"></a>
 
 </body>
 </html>
