--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 
     img {
       display: block;
-      width: 900px;   /* larghezza fissa */
+      width: 900px;   /* larghezza originale */
       height: auto;
       margin-left: auto;
       margin-right: auto;
