--- a/index.html
+++ b/index.html
@@ -9,49 +9,47 @@
     body {
       margin: 0;
       padding: 0;
-      position: relative; /* necessario per posizionare i link */
     }
 
-    /* Contenitore immagine con larghezza fissa */
+    /* Contenitore responsive */
     .img-wrapper {
       position: relative;
-      width: 900px; /* larghezza originale */
+      width: 90%;        /* si adatta allo schermo */
+      max-width: 900px;  /* larghezza massima */
       margin: 0 auto;
     }
 
     img {
       display: block;
-      width: 100%; /* si adatta al contenitore */
+      width: 100%;       /* responsive */
       height: auto;
     }
 
-    /* Link invisibili bloccati */
+    /* Link invisibili assoluti in percentuale */
     .link {
       position: absolute;
       display: block;
-      background: rgba(0,0,0,0); /* invisibile */
-      cursor: pointer;            /* cambia cursore */
+      background: rgba(0,0,0,0);
+      cursor: pointer;
     }
 
-    /* Effetto "Luce rossa da camera oscura" */
     .link:hover {
       background: rgba(255, 0, 0, 0.25);
       box-shadow: 0 0 15px rgba(255, 0, 0, 0.5);
     }
-
   </style>
 </head>
-
 <body>
 
   <div class="img-wrapper">
     <img src="img001.jpg" alt="Foglio scansionato con scritte About, Projects, Contact, Shop">
 
-    <!-- Pulsanti invisibili con nuove posizioni e dimensioni -->
-    <a href="about.html" class="link" style="top:50px; left:40px; width:100px; height:30px;"></a>
-    <a href="projects.html" class="link" style="top:90px; left:40px; width:155px; height:30px;"></a>
-    <a href="contact.html" class="link" style="top:120px; left:40px; width:140px; height:30px;"></a>
-    <a href="shop.html" class="link" style="top:160px; left:40px; width:80px; height:30px;"></a>
+    <!-- Link invisibili in percentuale -->
+    <a href="about.html" class="link" style="top:5.5%; left:4.4%; width:11%; height:5.5%;"></a>
+    <a href="projects.html" class="link" style="top:10%; left:4.4%; width:17%; height:5.5%;"></a>
+    <a href="contact.html" class="link" style="top:13%; left:4.4%; width:15.5%; height:5.5%;"></a>
+    <a href="shop.html" class="link" style="top:17.7%; left:4.4%; width:8.8%; height:5.5%;"></a>
+
   </div>
 
 </body>
