--- a/index.html
+++ b/index.html
@@ -2,53 +2,56 @@
 <html lang="it">
 <head>
   <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Home</title>
 
   <style>
     body {
       margin: 0;
       padding: 0;
+      position: relative; /* necessario per posizionare i link */
+      font-family: sans-serif;
     }
 
-    /* Contenitore responsive */
+    /* Contenitore con larghezza fissa */
     .img-wrapper {
       position: relative;
-      width: 90%;        /* si adatta allo schermo */
-      max-width: 900px;  /* larghezza massima */
+      width: 900px; /* larghezza fissa */
       margin: 0 auto;
     }
 
     img {
       display: block;
-      width: 100%;       /* responsive */
+      width: 100%; /* occupa tutta la larghezza del contenitore */
       height: auto;
     }
 
-    /* Link invisibili assoluti in percentuale */
+    /* Link invisibili bloccati */
     .link {
       position: absolute;
       display: block;
-      background: rgba(0,0,0,0);
-      cursor: pointer;
+      background: rgba(0,0,0,0); /* invisibile */
+      cursor: pointer;            /* cursore corretto */
+      z-index: 2;                  /* sopra l'immagine */
     }
 
+    /* Effetto "luce rossa" al passaggio del mouse */
     .link:hover {
       background: rgba(255, 0, 0, 0.25);
       box-shadow: 0 0 15px rgba(255, 0, 0, 0.5);
     }
+
   </style>
 </head>
 <body>
 
   <div class="img-wrapper">
-    <img src="img001.jpg" alt="Foglio scansionato con scritte About, Projects, Contact, Shop">
+    <img src="imghome3.jpg" alt="Foglio scansionato con scritte About, Projects, Contact, Shop">
 
-    <!-- Link invisibili in percentuale -->
-    <a href="about.html" class="link" style="top:5.5%; left:4.4%; width:11%; height:5.5%;"></a>
-    <a href="projects.html" class="link" style="top:10%; left:4.4%; width:17%; height:5.5%;"></a>
-    <a href="contact.html" class="link" style="top:13%; left:4.4%; width:15.5%; height:5.5%;"></a>
-    <a href="shop.html" class="link" style="top:17.7%; left:4.4%; width:8.8%; height:5.5%;"></a>
+    <!-- Pulsanti invisibili con posizioni bloccate -->
+    <a href="about.html"    class="link" style="top:50px; left:40px; width:100px; height:30px;"></a>
+    <a href="projects.html" class="link" style="top:90px; left:40px; width:155px; height:30px;"></a>
+    <a href="contact.html"  class="link" style="top:120px; left:40px; width:140px; height:30px;"></a>
+    <a href="shop.html"     class="link" style="top:160px; left:40px; width:80px; height:30px;"></a>
 
   </div>
 
