--- a/index.html
+++ b/index.html
@@ -8,21 +8,20 @@
     body {
       margin: 0;
       padding: 0;
-      position: relative; /* necessario per posizionare i link */
-      font-family: sans-serif;
     }
 
-    /* Contenitore con larghezza fissa */
+    /* Contenitore con larghezza e altezza fissa */
     .img-wrapper {
       position: relative;
-      width: 900px; /* larghezza fissa */
+      width: 900px;  /* larghezza fissa */
+      height: 600px; /* puoi adattare in base alla tua immagine */
       margin: 0 auto;
     }
 
     img {
       display: block;
-      width: 100%; /* occupa tutta la larghezza del contenitore */
-      height: auto;
+      width: 900px;  /* larghezza fissa */
+      height: 600px; /* altezza fissa */
     }
 
     /* Link invisibili bloccati */
@@ -34,7 +33,7 @@
       z-index: 2;                  /* sopra l'immagine */
     }
 
-    /* Effetto "luce rossa" al passaggio del mouse */
+    /* Effetto luce rossa al passaggio del mouse */
     .link:hover {
       background: rgba(255, 0, 0, 0.25);
       box-shadow: 0 0 15px rgba(255, 0, 0, 0.5);
@@ -47,7 +46,7 @@
   <div class="img-wrapper">
     <img src="imghome3.jpg" alt="Foglio scansionato con scritte About, Projects, Contact, Shop">
 
-    <!-- Pulsanti invisibili con posizioni bloccate -->
+    <!-- Pulsanti invisibili con coordinate precise -->
     <a href="about.html"    class="link" style="top:50px; left:40px; width:100px; height:30px;"></a>
     <a href="projects.html" class="link" style="top:90px; left:40px; width:155px; height:30px;"></a>
     <a href="contact.html"  class="link" style="top:120px; left:40px; width:140px; height:30px;"></a>
