--- a/index.html
+++ b/index.html
@@ -10,48 +10,46 @@
       padding: 0;
     }
 
-    /* Contenitore con larghezza e altezza fissa */
+    /* Contenitore che centra l'immagine e permette il posizionamento dei link */
     .img-wrapper {
       position: relative;
-      width: 900px;  /* larghezza fissa */
-      height: 600px; /* puoi adattare in base alla tua immagine */
-      margin: 0 auto;
+      width: 900px;       /* larghezza fissa per posizionamento preciso */
+      margin: 0 auto;     /* centra il contenitore nella pagina */
     }
 
     img {
       display: block;
-      width: 900px;  /* larghezza fissa */
-      height: 600px; /* altezza fissa */
+      width: 100%;
+      height: auto;
     }
 
-    /* Link invisibili bloccati */
     .link {
       position: absolute;
-      display: block;
       background: rgba(0,0,0,0); /* invisibile */
-      cursor: pointer;            /* cursore corretto */
-      z-index: 2;                  /* sopra l'immagine */
+      cursor: pointer;
     }
 
-    /* Effetto luce rossa al passaggio del mouse */
+    /* ⭐ EFFETTO "LUCE ROSSA DA CAMERA OSCURA" ⭐ */
     .link:hover {
       background: rgba(255, 0, 0, 0.25);
-      box-shadow: 0 0 15px rgba(255, 0, 0, 0.5);
+      box-shadow:
+        0 0 10px rgba(255, 60, 60, 0.4),
+        inset 0 0 6px rgba(255, 0, 0, 0.3);
     }
 
   </style>
 </head>
+
 <body>
 
   <div class="img-wrapper">
     <img src="imghome3.jpg" alt="Foglio scansionato con scritte About, Projects, Contact, Shop">
 
-    <!-- Pulsanti invisibili con coordinate precise -->
-    <a href="about.html"    class="link" style="top:50px; left:40px; width:100px; height:30px;"></a>
-    <a href="projects.html" class="link" style="top:90px; left:40px; width:155px; height:30px;"></a>
-    <a href="contact.html"  class="link" style="top:120px; left:40px; width:140px; height:30px;"></a>
-    <a href="shop.html"     class="link" style="top:160px; left:40px; width:80px; height:30px;"></a>
-
+    <!-- Pulsanti invisibili -->
+    <a href="about.html"    class="link" style="top:175px; left:200px; width:90px; height:20px;"></a>
+    <a href="projects.html" class="link" style="top:200px; left:200px; width:120px; height:20px;"></a>
+    <a href="contact.html"  class="link" style="top:225px; left:200px; width:110px; height:20px;"></a>
+    <a href="shop.html"     class="link" style="top:250px; left:200px; width:80px; height:20px;"></a>
   </div>
 
 </body>
