--- a/about.html
+++ b/about.html
@@ -18,10 +18,10 @@
     }
     .link-home {
       position: absolute;
-      top: 0;
-      left: 0;
-      width: 100%;
-      height: 100%;
+      top: 10;
+      left: 20;
+      width: 35;
+      height: 35;
       background: rgba(0,0,0,0); /* invisibile */
       cursor: pointer;
       z-index: 2;
