--- a/about.html
+++ b/about.html
@@ -8,20 +8,27 @@
       margin: 0;
       padding: 0;
     }
+
+    /* Contenitore con larghezza fissa per bloccare layout */
     .img-wrapper {
       position: relative;
+      width: 900px; /* larghezza fissa */
+      margin: 0 auto; /* centra nella pagina */
     }
+
     img {
+      display: block;
       width: 100%;
       height: auto;
-      display: block;
     }
+
+    /* Pulsante invisibile */
     .link-home {
       position: absolute;
-      top: 10;
-      left: 20;
-      width: 35;
-      height: 35;
+      top: 10px;
+      left: 20px;
+      width: 35px;   /* puoi ridurre se vuoi coprire solo una parte */
+      height: 35px;  /* puoi ridurre se vuoi coprire solo una parte */
       background: rgba(0,0,0,0); /* invisibile */
       cursor: pointer;
       z-index: 2;
