--- a/about.html
+++ b/about.html
@@ -25,10 +25,10 @@
     /* Pulsante invisibile */
     .link-home {
       position: absolute;
-      top: 0;
-      left: 0;
-      width: 100%;   /* puoi ridurre se vuoi coprire solo una parte */
-      height: 100%;  /* puoi ridurre se vuoi coprire solo una parte */
+      top: 40;
+      left: 50;
+      width: 55;   /* puoi ridurre se vuoi coprire solo una parte */
+      height: 30;  /* puoi ridurre se vuoi coprire solo una parte */
       background: rgba(0,0,0,0); /* invisibile */
       cursor: pointer;
       z-index: 2;
