--- a/about.html
+++ b/about.html
@@ -32,6 +32,15 @@
       background: rgba(0,0,0,0); /* invisibile */
       cursor: pointer;
       z-index: 2;
+      transition: all 0.3s ease;
+    }
+
+    /* Hover con luce gialla stile vintage */
+    .link-home:hover {
+      background: rgba(255, 255, 0, 0.2);
+      box-shadow:
+        0 0 15px rgba(255, 255, 100, 0.5),
+        inset 0 0 6px rgba(255, 255, 150, 0.3);
     }
   </style>
 </head>
