--- a/about.html
+++ b/about.html
@@ -9,7 +9,6 @@
       padding: 0;
     }
 
-    /* Contenitore con larghezza fissa */
     .img-wrapper {
       position: relative;
       width: 900px; /* larghezza fissa */
@@ -22,25 +21,25 @@
       height: auto;
     }
 
-    /* Pulsante invisibile */
+    /* Pulsante invisibile piccolo */
     .link-home {
       position: absolute;
-      top: 0;
-      left: 0;
-      width: 100%;
-      height: 100%;
+      top: 20px;    /* posizione verticale */
+      left: 20px;   /* posizione orizzontale */
+      width: 100px; /* dimensione pulsante */
+      height: 50px;
       background: rgba(0,0,0,0); /* invisibile */
       cursor: pointer;
-      z-index: 10; /* assicurati sia sopra l'immagine */
+      z-index: 10;
       transition: box-shadow 0.3s ease, background 0.3s ease;
     }
 
-    /* Hover con luce gialla */
+    /* Hover luce gialla */
     .link-home:hover {
       background: rgba(255, 255, 0, 0.2);
       box-shadow:
-        0 0 20px rgba(255, 255, 100, 0.7),
-        inset 0 0 10px rgba(255, 255, 150, 0.4);
+        0 0 15px rgba(255, 255, 100, 0.7),
+        inset 0 0 8px rgba(255, 255, 150, 0.5);
     }
   </style>
 </head>
