--- a/index.html
+++ b/index.html
@@ -2,19 +2,17 @@
 <html lang="it">
 <head>
   <meta charset="UTF-8">
-  <title>Home</title>
-
+  <title>About</title>
   <style>
     body {
       margin: 0;
       padding: 0;
     }
 
-    /* Contenitore che centra l'immagine e permette il posizionamento dei link */
     .img-wrapper {
       position: relative;
-      width: 900px;       /* larghezza fissa per posizionamento preciso */
-      margin: 0 auto;     /* centra il contenitore nella pagina */
+      width: 900px; /* larghezza fissa */
+      margin: 0 auto;
     }
 
     img {
@@ -23,35 +21,34 @@
       height: auto;
     }
 
-    .link {
+    /* Pulsante invisibile */
+    .link-home {
       position: absolute;
+      top: 0;
+      left: 0;
+      width: 100%;
+      height: 100%;
       background: rgba(0,0,0,0); /* invisibile */
       cursor: pointer;
+      z-index: 10;
+      transition: all 0.3s ease;
     }
 
-    /* ⭐ EFFETTO "LUCE ROSSA DA CAMERA OSCURA" ⭐ */
-    .link:hover {
-      background: rgba(255, 0, 0, 0.25);
+    /* ⭐ EFFETTO "LUCE GIALLA DA CAMERA OSCURA" ⭐ */
+    .link-home:hover {
+      background: rgba(255, 255, 0, 0.25);
       box-shadow:
-        0 0 10px rgba(255, 60, 60, 0.4),
-        inset 0 0 6px rgba(255, 0, 0, 0.3);
+        0 0 10px rgba(255, 255, 60, 0.4),
+        inset 0 0 6px rgba(255, 255, 0, 0.3);
     }
-
   </style>
 </head>
-
 <body>
 
   <div class="img-wrapper">
-    <img src="imghome3.jpg" alt="Foglio scansionato con scritte About, Projects, Contact, Shop">
-
-    <!-- Pulsanti invisibili -->
-    <a href="about.html"    class="link" style="top:30px; left:50px; width:110px; height:30px;"></a>
-    <a href="projects.html" class="link" style="top:70px; left:50px; width:160px; height:30px;"></a>
-    <a href="contact.html"  class="link" style="top:105px; left:50px; width:140px; height:30px;"></a>
-    <a href="shop.html"     class="link" style="top:145px; left:50px; width:80px; height:30px;"></a>
+    <img src="about1.jpg" alt="About">
+    <a href="index.html" class="link-home"></a>
   </div>
 
 </body>
 </html>
-
