--- a/index.html
+++ b/index.html
@@ -24,10 +24,10 @@
     /* Pulsante invisibile */
     .link-home {
       position: absolute;
-      top: 0;
-      left: 0;
-      width: 100%;
-      height: 100%;
+      top: 40;
+      left: 45;
+      width: 70;
+      height: 25;
       background: rgba(0,0,0,0); /* invisibile */
       cursor: pointer;
       z-index: 10;
@@ -52,3 +52,4 @@
 
 </body>
 </html>
+
