--- a/index.html
+++ b/index.html
@@ -2,17 +2,19 @@
 <html lang="it">
 <head>
   <meta charset="UTF-8">
-  <title>About</title>
+  <title>Home</title>
+
   <style>
     body {
       margin: 0;
       padding: 0;
     }
 
+    /* Contenitore che centra l'immagine e permette il posizionamento dei link */
     .img-wrapper {
       position: relative;
-      width: 900px; /* larghezza fissa */
-      margin: 0 auto;
+      width: 900px;       /* larghezza fissa per posizionamento preciso */
+      margin: 0 auto;     /* centra il contenitore nella pagina */
     }
 
     img {
@@ -21,34 +23,50 @@
       height: auto;
     }
 
-    /* Pulsante invisibile piccolo in alto a sinistra */
-    .link-home {
+    .link {
       position: absolute;
-      top: 20px;   /* distanza dal bordo superiore */
-      left: 20px;  /* distanza dal bordo sinistro */
-      width: 60px; /* larghezza pulsante */
-      height: 60px; /* altezza pulsante */
       background: rgba(0,0,0,0); /* invisibile */
       cursor: pointer;
-      z-index: 10;
-      transition: box-shadow 0.3s ease, background 0.3s ease;
-      border-radius: 50%; /* pulsante circolare, opzionale */
     }
 
-    /* ⭐ Luce gialla vintage al passaggio del mouse ⭐ */
-    .link-home:hover {
-      background: rgba(255, 255, 0, 0.25);
+    /* ⭐ EFFETTO "LUCE ROSSA DA CAMERA OSCURA" ⭐ */
+    .link:hover {
+      background: rgba(255, 0, 0, 0.25);
       box-shadow:
-        0 0 15px rgba(255, 255, 100, 0.7),
-        inset 0 0 8px rgba(255, 255, 150, 0.5);
+        0 0 10px rgba(255, 60, 60, 0.4),
+        inset 0 0 6px rgba(255, 0, 0, 0.3);
     }
+
   </style>
 </head>
+
 <body>
 
   <div class="img-wrapper">
-    <img src="about1.jpg" alt="About">
-    <a href="index.html" class="link-home" title="Torna alla Home"></a>
+    <img src="img001.jpg" alt="Foglio scansionato con scritte About, Projects, Contact, Shop">
+
+    <!-- Pulsanti invisibili -->
+    <a href="about.html"    class="link" style="top:175px; left:200px; width:90px; height:20px;"></a>
+    <a href="projects.html" class="link" style="top:200px; left:200px; width:120px; height:20px;"></a>
+    <a href="contact.html"  class="link" style="top:225px; left:200px; width:110px; height:20px;"></a>
+    <a href="shop.html"     class="link" style="top:250px; left:200px; width:80px; height:20px;"></a>
+  </div>
+
+</body>
+</html>
+
+Davide Alicandro <alicandro.da@gmail.com>
+12:55 (1 ora fa)
+a me
+
+ok aggiornato con misure px
+    <img src="imghome3.jpg" alt="Foglio scansionato con scritte About, Projects, Contact, Shop">
+
+    <!-- Pulsanti invisibili -->
+    <a href="about.html"    class="link" style="top:30px; left:50px; width:110px; height:30px;"></a>
+    <a href="projects.html" class="link" style="top:70px; left:50px; width:160px; height:30px;"></a>
+    <a href="contact.html"  class="link" style="top:105px; left:50px; width:140px; height:30px;"></a>
+    <a href="shop.html"     class="link" style="top:145px; left:50px; width:80px; height:30px;"></a>
   </div>
 
 </body>
