--- a/about.html
+++ b/about.html
@@ -21,22 +21,23 @@
       height: auto;
     }
 
-    /* Pulsante invisibile piccolo */
+    /* Pulsante invisibile piccolo in alto a sinistra */
     .link-home {
       position: absolute;
-      top: 20px;    /* posizione verticale */
-      left: 20px;   /* posizione orizzontale */
-      width: 100px; /* dimensione pulsante */
-      height: 50px;
+      top: 20px;   /* distanza dal bordo superiore */
+      left: 20px;  /* distanza dal bordo sinistro */
+      width: 60px; /* larghezza pulsante */
+      height: 60px; /* altezza pulsante */
       background: rgba(0,0,0,0); /* invisibile */
       cursor: pointer;
       z-index: 10;
       transition: box-shadow 0.3s ease, background 0.3s ease;
+      border-radius: 50%; /* pulsante circolare, opzionale */
     }
 
-    /* Hover luce gialla */
+    /* ⭐ Luce gialla vintage al passaggio del mouse ⭐ */
     .link-home:hover {
-      background: rgba(255, 255, 0, 0.2);
+      background: rgba(255, 255, 0, 0.25);
       box-shadow:
         0 0 15px rgba(255, 255, 100, 0.7),
         inset 0 0 8px rgba(255, 255, 150, 0.5);
@@ -47,8 +48,9 @@
 
   <div class="img-wrapper">
     <img src="about1.jpg" alt="About">
-    <a href="index.html" class="link-home"></a>
+    <a href="index.html" class="link-home" title="Torna alla Home"></a>
   </div>
 
 </body>
 </html>
+
