--- a/projects.html
+++ b/projects.html
@@ -2,15 +2,54 @@
 <html lang="it">
 <head>
   <meta charset="UTF-8">
-  <title>Projects</title>
+  <title>About</title>
   <style>
-    body { margin: 0; padding: 0; }
-    img { width: 100%; height: auto; display: block; }
+    body {
+      margin: 0;
+      padding: 0;
+    }
+
+    .img-wrapper {
+      position: relative;
+      width: 900px; /* larghezza fissa */
+      margin: 0 auto;
+    }
+
+    img {
+      display: block;
+      width: 100%;
+      height: auto;
+    }
+
+    /* Pulsante invisibile piccolo in alto a sinistra */
+    .link-home {
+      position: absolute;
+      top: 20px;   /* distanza dal bordo superiore */
+      left: 20px;  /* distanza dal bordo sinistro */
+      width: 60px; /* larghezza pulsante */
+      height: 60px; /* altezza pulsante */
+      background: rgba(0,0,0,0); /* invisibile */
+      cursor: pointer;
+      z-index: 10;
+      transition: box-shadow 0.3s ease, background 0.3s ease;
+      border-radius: 50%; /* pulsante circolare, opzionale */
+    }
+
+    /* ⭐ Luce gialla vintage al passaggio del mouse ⭐ */
+    .link-home:hover {
+      background: rgba(255, 255, 0, 0.25);
+      box-shadow:
+        0 0 15px rgba(255, 255, 100, 0.7),
+        inset 0 0 8px rgba(255, 255, 150, 0.5);
+    }
   </style>
 </head>
 <body>
 
-  <img src="project.jpg" alt="Projects">
+  <div class="img-wrapper">
+    <img src="imgprojects.jpg" alt="About">
+    <a href="index.html" class="link-home" title="Torna alla Home"></a>
+  </div>
 
 </body>
 </html>
